Add large model file to Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 .keras filter=lfs diff=lfs merge=lfs -text
-inceptionv3model_v1_inceptionV3.keras filter=lfs diff=lfs merge=lfs -text
 inceptionv3/model_v1_inceptionV3.keras filter=lfs diff=lfs merge=lfs -text
+Xceptionmodel_xception.keras filter=lfs diff=lfs merge=lfs -text
+Xception/model_xception.keras filter=lfs diff=lfs merge=lfs -text
