--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 inceptionv3/model_v1_inceptionV3.keras filter=lfs diff=lfs merge=lfs -text
 Xceptionmodel_xception.keras filter=lfs diff=lfs merge=lfs -text
 Xception/model_xception.keras filter=lfs diff=lfs merge=lfs -text
+image_classification/inceptionv3/model_v1_inceptionV3.keras filter=lfs diff=lfs merge=lfs -text
