--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ image_classification/Xception/model_xception.keras filter=lfs diff=lfs merge=lfs
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+*.keras filter=lfs diff=lfs merge=lfs -text
